refactor: fix casing and naming of js files

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 	<canvas id="gameCanvas"></canvas>
 	<script src="stack.js"></script>
 	<script src="game.js"></script>
-	<script src="states/Welcomestate.js"></script>
-	<script src="states/mainstate.js"></script>
+	<script src="states/welcome-state.js"></script>
+	<script src="states/main-state.js"></script>
+	<script src="states/level-complete-state.js"></script>
 	<script src="levels/level1.js"></script>
 	<script>
 
